[package]
name = "rust-screen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.23.0"
eframe = "0.23.0"
egui_extras = { version = "0.23.0", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] } 
screenshots = "0.8.5"
rfd = "0.12.1"

