[package]
name = "rust-screen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.23.0"
eframe = "0.23.0"
egui_extras = { version = "0.23.0", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] } 
screenshots = "0.8.5"
rfd = "0.12.1"
arboard = "3.2.1"
dirs = "5.0.1"
chrono = "0.4.31"
egui_plot = "0.23.0"
serde = { version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
